feat: route image populate/search/test-keys to Java ImagePopulator
All populate/search/test-keys operations now proxy from .NET API to Java
ImagePopulator. Java owns provider logic (Pexels, Pixabay, Unsplash,
Google, Wikipedia, Custom). New populate-queue endpoint feeds Java the
list of ships/captains needing images.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>